# Python-Starter-File

./: README.md  pyproject.toml
notebook/: firstnote.ipynb
src/: index.py
